@@ -1,4 +1,4 @@
-$Id: History,v 1.9 1999-06-09 01:08:07 asaim Exp $
+$Id: History,v 1.10 1999-07-25 05:05:15 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Jul 25, 99 M.Asai 
+- Store/restore the status of the random number engine to
+  separate files
 
 Jun 09, 99 M.Asai (tag run-01-00-06)
 - Store/restore the status of the random number engine
